hphp/hack/test/typecheck/higher_kinded_types/user_attributes_unsupported.php.exp
File "user_attributes_unsupported.php", line 3, characters 31-32:
`T1` is a higher-kinded type parameter, standing for a type that has type parameters itself. We don't support user attributes on parameters like `T1`. (Naming[2047])
File "user_attributes_unsupported.php", line 3, characters 61-62:
`T4` is a generic parameter of another (higher-kinded) generic parameter. We don't support user attributes on parameters like `T4`. (Naming[2047])
