hphp/hack/test/typecheck/higher_kinded_types/user_attributes_unsupported.php
<?hh // strict

class Test< <<__Enforceable>> T1<T2>, T3< <<__Enforceable>> T4 > > {}
